--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 		</li>
 		<li>
 			<a href="https://simple.wikipedia.org/wiki/Poodle" target="_blank">
-				<img src="https://th.bing.com/th/id/OIP.QMsMAWHT6aO0YheqPM3VaQAAAA?cb=iwc2&w=467&h=624&rs=1&pid=ImgDetMain" alt="poodle">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="poodle">
 			</a>
 		</li>
 	</ul>
