--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		</li>
 		<li>
 			<a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
-				<img src=" https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg' at Context.eval (http://localhost:3000/__cypress/tests?p=cypress/integration/tests/test.spec.js:118:20)" alt="poodle">
+				<img src=" https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="poodle">
 			</a>
 		</li>
 	</ul>
