--- a/main.html
+++ b/main.html
@@ -7,9 +7,12 @@
 </head>
 
 <body>
+	 <h1>Dog Breeds</h1>
 	<ul>
 		<li>
-			<a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg " alt="Golden Retirever" width="200" height="200" ></a>
+			<a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank"> 
+				<img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="Golden Retirever" width="200" height="200">
+			</a>
 		</li>
 		<li>
 			<a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
